--- a/reton/package.json
+++ b/reton/package.json
@@ -22,7 +22,10 @@
     "react-hook-form": "^6.9.6",
     "react-modal-video": "^1.2.6",
     "react-owl-carousel3": "^2.2.5",
+    "react-useanimations": "^2.0.6",
+    "reshake": "^1.2.1",
     "sass": "^1.27.0",
+    "styled-components": "^5.2.1",
     "sweetalert2": "^10.8.1",
     "sweetalert2-react-content": "^3.2.1"
   }
