--- a/ave.yaml
+++ b/ave.yaml
@@ -3,11 +3,11 @@ Navbar:
   cvLink: https://raw.githubusercontent.com/eduardosanzb/eduardosanzb/master/cv.pdf
 MainBanner:
   bigText: AVE
-  firstName: Alberto
+  firstName: Jose Alberto
   lastName: Vera Vigil
-  description: "Hello I am a passionate <span>Software Engineer</span> excited\n
-    \     for innovation & technology. With 5+ years of profound and wide-ranging
-    experience. Expert in developing web & mobile solutions. \U0001F1F2\U0001F1FD
+  description: "Hello I am a passionate <span>Mechanical Engineer</span> excited\n
+    \     for innovation & technology. With 7+ years of profound and wide-ranging
+    experience. Expert in product develpment in the automotive industry. \U0001F1F2\U0001F1FD
     \U0001F32E "
   twitter: eduardosanzb
   linkedin: https://www.linkedin.com/in/eduardosanzb/
